# src/main/kotlin/com/wutsi/earning/endpoint/UserEarningsController.kt
@@ -2,6 +2,7 @@ package com.wutsi.earning.endpoint
 
 import com.wutsi.earning.`delegate`.UserEarningsDelegate
 import com.wutsi.earning.dto.SearchEarningResponse
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.RequestParam
@@ -14,6 +15,7 @@ public class UserEarningsController(
     private val `delegate`: UserEarningsDelegate
 ) {
     @GetMapping("/v1/earnings/users/{user-id}")
+    @PreAuthorize(value = "hasAuthority('earning')")
     public fun invoke(
         @PathVariable(name = "user-id") userId: Long,
         @RequestParam(
